# memex

./: AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix  release.toml
.claude/skills/automem-search/: SKILL.md
.github/workflows/: ci.yml  release.yml
examples/: embed_bench.rs  embed_matrix.rs  embed_smoke.rs
nix/: hm-module.nix  nixos-module.nix  package.nix
scripts/: setup.sh
skills/codex/: memex-search.md
skills/codex/memex-search/: SKILL.md
skills/memex-search/: SKILL.md
skills/opencode/memex-search/: SKILL.md
src/: cli.rs  config.rs  embed.rs  index.rs  ingest.rs  lib.rs  main.rs  progress.rs  state.rs  test_support.rs  tui.rs  types.rs  vector.rs
