[package]
name = "memex"
version = "0.2.5"
edition = "2024"
description = "CLI tool for indexing and searching Claude Code conversation history"
license = "MIT"
repository = "https://github.com/nicosuave/memex"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
fastembed = "5"
model2vec-rs = "0.1.4"
ort = "2.0.0-rc.10"
crossbeam-channel = "0.5"
once_cell = "1.19"
memchr = "2.7"
memmap2 = "0.9"
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = { version = "0.13", features = ["serde"] }
tantivy = "0.22"
usearch = "2"
toml = "0.8"
walkdir = "2.5"
indicatif = "0.17"
ratatui = "0.28"
crossterm = "0.27"
tempfile = "3"
libc = "0.2"

[dev-dependencies]
